--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <header></header>
         <main>
-            <label for="city">Tapez une ville : </label>
-            <input type="text" id="city" placeholder="votre ville">
-            <button id="btn-submit">Affichez la meteo de cette ville</button>
-            <div id="content"></div>
+            <div class="form">
+                <input type="text" id="city" placeholder="votre ville">
+                <button id="btn-submit">Affichez la meteo de cette ville</button>
+            </div>
+            <div id="content">
+                <div id="div-city"></div>
+                <div id="div-temp"></div>
+                <div id="div-sky"></div>
+                <div id="div-country"></div>
+            </div>
         </main>
     </div>
     <script src="js/app.js"></script>
