--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <main>
             <div class="form">
-                <input type="text" id="city" placeholder="votre ville">
+                <input type="text" id="city" placeholder="Tapez le nom d'une ville">
                 <button id="btn-submit">Affichez la meteo de cette ville</button>
             </div>
             <div id="content">
@@ -21,6 +21,6 @@
             </div>
         </main>
     </div>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
